# TP1-Concurrentes

./: .gitignore  Ajustador.cpp  Ajustador.h  Aplanador.cpp  Aplanador.h  CMakeLists.txt  Camara.cpp  Camara.h  Imagen.cpp  Imagen.h  Log.cpp  Log.h  MemoriaCompartida.h  Pixel.cpp  Pixel.h  README.md  main.cpp
fifos/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h  main.cpp
memoria_compartida/: MemoriaCompartida.h  main.cpp
senial/: EventHandler.h  SIGINT_handler.h  SignalHandler.cpp  SignalHandler.h
